vlib/v/checker/tests/lambda_or_block_err.out
vlib/v/checker/tests/lambda_or_block_err.vv:10:10: error: cannot use `!int` as type `int` in return argument
    8 | 
    9 | fn main() {
   10 |     foo(|i| bar(i))
      |             ~~~~~~
   11 |     foo(|i| bar(i) or {})
   12 |     foo(|i| bar(i) or { 0 })
vlib/v/checker/tests/lambda_or_block_err.vv:11:17: error: expression requires a non empty `or {}` block
    9 | fn main() {
   10 |     foo(|i| bar(i))
   11 |     foo(|i| bar(i) or {})
      |                    ~~~~~
   12 |     foo(|i| bar(i) or { 0 })
   13 | }
