vlib/v/checker/tests/lambda_or_block_err.vv
fn foo(callback fn (int) int) {
	dump([1, 2, 3].map(callback))
}

fn bar(a int) !int {
	return a
}

fn main() {
	foo(|i| bar(i))
	foo(|i| bar(i) or {})
	foo(|i| bar(i) or { 0 })
}
